styles/LanguagePicker.sass
div.LanguagePicker
    margin: auto
    width: 100%
    height: 0.4in
    display: grid
    grid-template-columns: repeat(2, 1fr)
    border-radius: 5px
    overflow: hidden
    z-index: 1000
    > button
        height: 100%
        background: white
        border: none
        cursor: pointer
        &.LanguagePicker-selected
            background: var(--primary-color)
            color: var(--primary-text-color)

